successfully GET requested data from weather API

--- a/index.html
+++ b/index.html
@@ -1,20 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- <script src = "index.js"></script>
-        <style>
-            #map {
-            height: 100%;
-            }
-            html, body {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            }
-        </style>
-        <script async
+        <script src = "index.js"></script>
+        <!-- <script async
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3m8GB4KsIQYIJzqB7PXdTCzrBHPWZlR0&callback=initMap">
         </script> -->
+        <link rel="stylesheet" href="style.css">
     </head>
     <map>
         <form>
@@ -29,9 +20,7 @@
         </form>
     </map>
     <body>
-        <h1>
-            Hello World!
-        </h1>
+        
     </body>
 
 </html>
