figured out a way to get the icon

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         </form>
     </map>
     <body>
-        
+        <h1>test</h1>
+        <img src="https://openweathermap.org/img/wn/10d.png">
     </body>
 
 </html>
