--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                 <p>Fish are friends, not food.</p>
                 <p>Fish are friends, not food.</p>
                 <p>Fish are friends, not food.</p>
+                <p>Fish are friends, not food.</p>
             </div>
         </div>
     </div>
