--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="mainPage">
+<body onload="initialize()" class="mainPage">
     <div id="landingPage">
         <h1>
             Would I Go There?
@@ -42,12 +42,12 @@
     <div class="result">
         <h1>Holding text: "Your home"</h1>
 
-        <body onload="initialize()" class="homeMap">
-            <div id="map_canvas1" style="height:500px; width:60%"></div>
+        <div class="homeMap">
+            <div id="map_canvas1" style="height:500px; width:100%"></div>
             <!-- <input type="text" id="address" /> -->
             <!-- <button onclick="codeAddress()">Go!</button> -->
             <script src="index.js"></script>
-        </body>
+        </div>
     </div>
 
     <!-- <div id="weatherBarHome">
@@ -61,12 +61,12 @@
         <div class="resultContents">
 
 
-            <body onload="initialize()" class="otherSideOfTheWorld">
-                <div id="map_canvas2" style="height:500px; width: 60%"></div>
+            <div  class="otherSideOfTheWorld">
+                <div id="map_canvas2" style="height:500px; width: 100%"></div>
                 <!-- <input type="text" id="address" />
                     <button onclick="codeAddress()">Go!</button> -->
                 <script src="index.js"></script>
-            </body>
+                </div>
         
 
 
@@ -91,17 +91,5 @@
 
 
 </body>
-
-
-
-
-
-
-
-
-
-
-
-
 
 </html>
