centered home map and made it smaller

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </div>
 
-    <div class="result">
+    <div class="result homeInfo">
         <h1>Holding text: "Your home"</h1>
 
         <div class="homeMap">
