--- a/index.html
+++ b/index.html
@@ -39,14 +39,21 @@
         </div>
     </div>
 
-    <div class="result homeInfo">
-        <h1>Holding text: "Your home"</h1>
+    <br> 
+    <h1>Holding text: "Your home"</h1>
+
+    <div class="homeInfo">
 
         <div class="homeMap">
             <div id="map_canvas1" style="height:500px; width:100%"></div>
             <!-- <input type="text" id="address" /> -->
             <!-- <button onclick="codeAddress()">Go!</button> -->
             <script src="index.js"></script>
+        </div>
+        <div class="locationInformation">
+            <h3>Country Data or Fish Data</h3>
+            <p id="homeElevation"></p>
+            <p id = "homeTime"></p>
         </div>
     </div>
 
@@ -57,7 +64,7 @@
     <div class="result">
         <h1>Holding text: "If you dug a hole and traveled through the Earth, you would arrive in ${}"</h1>
         <h2>"Local Time: ${}"</h2>
-        <h2>Placeholder position:"Elevation/Depth"</h2>
+        <h2 id = "otherSideElevation">Placeholder position:"Elevation/Depth"</h2>
         <div class="resultContents">
 
 
