fixed antipodal calculator but weather still isnt updating properly

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
         </div>
         <br>
         <div>Converted Lat </div>
-        <div id="newLat">
-        </div>
+        <p id="newLat">
+        </p>
         <br>
         <div>Converted Long </div>
-        <div id="newLong">
-        </div>
+        <p id="newLong">
+        </p>
     </div>
 
     <br> 
