elevation results working

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <div class="result">
         <h1>Holding text: "If you dug a hole and traveled through the Earth, you would arrive in ${}"</h1>
-        <h2>"Local Time: ${}"</h2>
+        <h2 id = "otherSideTime">"Local Time: ${}"</h2>
         <h2 id = "otherSideElevation">Placeholder position:"Elevation/Depth"</h2>
         <div class="resultContents">
 
