--- a/index.html
+++ b/index.html
@@ -41,20 +41,18 @@
     </div>
 
     <br> 
-    <h1>Holding text: "Your home"</h1>
+    <br>
+    <h1>Current Location</h1>
 
     <div class="homeInfo">
 
         <div class="homeMap">
-            <div id="map_canvas1" style="height:500px; width:100%"></div>
+            <div id="map_canvas1" style="height:500px; width:60%"></div>
             <!-- <input type="text" id="address" /> -->
             <!-- <button onclick="codeAddress()">Go!</button> -->
+            <!-- <span id="homeCity">Current City</span> -->
+            <p id = "homeTime">Time at your current location:</p>
             <script src="index.js"></script>
-        </div>
-        <div class="locationInformation">
-            <h3>Country Data or Fish Data</h3>
-            <p id="homeElevation"></p>
-            <p id = "homeTime"></p>
         </div>
     </div>
 
