--- a/index.html
+++ b/index.html
@@ -5,22 +5,26 @@
     <script defer src="index.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3m8GB4KsIQYIJzqB7PXdTCzrBHPWZlR0"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://kit.fontawesome.com/364e464d32.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body onload="initialize()" class="mainPage">
     <div id="landingPage">
-        <h1>
-            Would I Go There?
+        <h1 id="webpageTitle">
+            What is directly on the other side of the world?
         </h1>
-        <img src="images/globe.svg">
+    </div>
+    <div id="webpageImage">
+        <img src="images/world 1.svg">
     </div>
 
 
     <form class="addressInput">
-        <label>Current Address</label>
-        <input id="address" type="text" />
+        <!-- <label>Current Address</label> -->
+        <!-- <i class="fa-regular fa-magnifying-glass"></i> -->
+        <input id="address" placeholder="Where do you live?" type="text" />
     </form>
 
 
@@ -40,8 +44,12 @@
         </p>
     </div>
 
-    <br> 
-    <h1>Holding text: "Your home"</h1>
+    <br>
+    <div id="ourHomeTitle">
+        
+        <h1>Current Location</h1>
+    </div>
+
 
     <div class="homeInfo">
 
@@ -54,7 +62,7 @@
         <div class="locationInformation">
             <h3>Country Data or Fish Data</h3>
             <p id="homeElevation"></p>
-            <p id = "homeTime"></p>
+            <p id="homeTime"></p>
         </div>
     </div>
 
@@ -63,33 +71,33 @@
 
 
     <div class="result">
-        <h1 id = "otherCountry">"If you dug a hole and traveled through the Earth, you would arrive in ${}"</h1>
-        <h2 id = "otherSideTime">"Local Time: ${}"</h2>
-        <h2 id = "otherSideElevation">Placeholder position:"Elevation/Depth"</h2>
+        <h1 id="otherCountry">"If you dug a hole and traveled through the Earth, you would arrive in ${}"</h1>
+        <h2 id="otherSideTime">"Local Time: ${}"</h2>
+        <h2 id="otherSideElevation">Placeholder position:"Elevation/Depth"</h2>
         <div class="resultContents">
 
 
-            <div  class="otherSideOfTheWorld">
+            <div class="otherSideOfTheWorld">
                 <div id="map_canvas2" style="height:500px; width: 100%"></div>
                 <!-- <input type="text" id="address" />
                     <button onclick="codeAddress()">Go!</button> -->
                 <script src="index.js"></script>
-                </div>
-        
+            </div>
 
 
 
-            <div id = "locationInformation" class = "locationInformation">
-                <h3 class = "otherData">Country Data or Fish Data</h3>
+
+            <div id="locationInformation" class="locationInformation">
+                <h3 class="otherData">Country Data or Fish Data</h3>
             </div>
         </div>
     </div>
 
 
-   <div id = "weather">
-    <div id="weatherBar">
+    <div id="weather">
+        <div id="weatherBar">
 
-    </div>
+        </div>
     </div>
 
 
