tweaked the weather bar

--- a/index.html
+++ b/index.html
@@ -61,8 +61,6 @@
         </div>
     </div>
 
-    <!-- <div id="weatherBarHome">
-    </div> -->
 
 
     <div class="result">
@@ -90,6 +88,10 @@
 
 
     <div id="weather">
+        <div id="weatherTitle">
+            <h3>Weather</h3>
+            <button>Toggle</button>
+        </div>
         <div id="weatherBar">
 
         </div>
