nft turtle added. bugs fixed

--- a/index.html
+++ b/index.html
@@ -171,15 +171,13 @@
         </div>
         <div id="fishInformation">
             <div id="fishText">
-                <h3 id="fishName">Turtle</h3>
-                <p id="fishOverview">Overview</p>
-                <p id="fishOverviewText">Lorem ipsum dolor sit amet consectetur. Non interdum malesuada sed mi.
-                    Tortor lorem id dignissim diam mi adipiscing pulvinar aliquet sit. Dui cras vitae vestibulum sed
-                    morbi ac. Id vitae ac quisque sed mattis iaculis.</p>
+                <h3 id="fishName">NFT Turtle</h3>
+                <p id="fishOverview">Fun Facts</p>
+                <p id="fishOverviewText">I am expensive</p>
             </div>
             <div id="fishImg">
                 <img id="fishiesPlease"
-                    src="https://i.pinimg.com/originals/27/11/45/27114591b632f74dbf33dbe0f097a001.jpg">
+                    src="images/turtle.png">
             </div>
 
             <!-- <div id="donate">
