--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <script defer src="index.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3m8GB4KsIQYIJzqB7PXdTCzrBHPWZlR0"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -176,8 +175,7 @@
                 <p id="fishOverviewText">I am expensive</p>
             </div>
             <div id="fishImg">
-                <img id="fishiesPlease"
-                    src="images/turtle.png">
+                <img id="fishiesPlease" src="images/turtle.png">
             </div>
 
             <!-- <div id="donate">
@@ -187,12 +185,10 @@
         </div>
     </div>
 
-    <div id="searchAgain">
-        <button onclick="refreshPage()">Let's Dig Again!</button>
-    </div>
 
+    <button id="digAgainButton">Let's Dig Again!</button>
 
-
+    <script src="index.js"></script>
 </body>
 
 </html>
