cleaned up the responsive code, didnt fix facts yet

--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
         <!-- <div  -->
         <img id="webpageImage" src="images/world 1.svg">
         <!-- </div> -->
-        <form class="addressInput">
+        <form id = "form1" class="addressInput">
             <!-- <label>Current Address</label> -->
             <!-- <i class="fa-regular fa-magnifying-glass"></i> -->
             <input id="address" placeholder="Where do you live?" type="text" />
+            <span><button id = "submitButton" type="submit" form ="form1">Submit</button></span>
         </form>
     </div>
     <br>
