fish image and lets dig again button design

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body onload="initialize()" class="mainPage" >
+<body onload="initialize()" class="mainPage">
     <div id="landingPage">
         <h1 id="webpageTitle">
             What's on the other side of the world?
@@ -19,11 +19,11 @@
         <!-- <div  -->
         <img id="webpageImage" src="images/world 1.svg">
         <!-- </div> -->
-        <form id = "form1" class="addressInput">
+        <form id="form1" class="addressInput">
             <!-- <label>Current Address</label> -->
             <!-- <i class="fa-regular fa-magnifying-glass"></i> -->
             <input id="address" placeholder="Where do you live?" type="text" />
-            <span><button id = "submitButton" type="submit" form ="form1">Submit</button></span>
+            <span><button id="submitButton" type="submit" form="form1">Submit</button></span>
         </form>
     </div>
     <br>
@@ -47,7 +47,7 @@
     <br>
     <div class="diggingPanel">
         <h1> Let's Start Digging </h1>
-        <img id = "diggingImage" src="./images/digging.svg" />
+        <img id="diggingImage" src="./images/digging.svg" />
         <h3> Where will we end up? </h3>
     </div>
 
@@ -145,7 +145,7 @@
         </div>
     </div>
 
-    
+
 
     <div id="fishSection">
         <div id="fishTitle">
@@ -161,15 +161,14 @@
                 <img id="fishiesPlease" src="images/turtle.png">
             </div>
 
-            <!-- <div id="donate">
-                <a href="https://oceanconservancy.org/" target="_blank"><button>Donate</button></a>
-            </div> -->
-
         </div>
     </div>
 
 
-    <button id="digAgainButton">Let's Dig Again!</button>
+    <button id="digAgainButton">
+        <i class="fa-solid fa-person-digging"></i>
+        Let's Dig Again!
+    </button>
 
     <script src="index.js"></script>
 </body>
