updated ocean text

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
     <div id="fishSection">
         <div id="fishTitle">
-            <h3>Meet your new neighbor!</h3>
+            <h3 id = "meetNeighbor">Meet your new neighbor!</h3>
         </div>
         <div id="fishInformation">
             <div id="fishText">
