fixed fish texts + sizing of map2 on mobile

--- a/index.html
+++ b/index.html
@@ -149,12 +149,11 @@
 
     <div id="fishSection">
         <div id="fishTitle">
-            <h3 id = "meetNeighbor">Meet your new neighbor!</h3>
+            <h3 id = "meetNeighbor">Meet your neighbor!</h3>
         </div>
         <div id="fishInformation">
             <div id="fishText">
-                <h3 id="fishName">NFT Turtle</h3>
-                <p id="fishOverview">Fun Facts</p>
+                <h4 id="fishName">NFT Turtle</h4>
                 <p id="fishOverviewText">I am expensive</p>
             </div>
             <div id="fishImg">
